objects/phone_plan__x.object
<CustomObject>
    <description>phone_plans</description>
    <externalDataSource>Mobile_Devices</externalDataSource>
    <externalName>phone_plans</externalName>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Cost</description>
        <externalDeveloperName>Cost</externalDeveloperName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Limit__c</fullName>
        <description>Data_Limit</description>
        <externalDeveloperName>Data_Limit</externalDeveloperName>
        <label>Data_Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Limit__c</fullName>
        <description>Text_Limit</description>
        <externalDeveloperName>Text_Limit</externalDeveloperName>
        <label>Text_Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>phone_plans</label>
    <pluralLabel>phone_plans</pluralLabel>
</CustomObject>